--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- AÇÕES -->
   <main class="acoes">
-        <a href="https://drive.google.com/file/d/1EdjtSAQt97A2GJejfIlb272c593sfb1L/view?usp=sharing" class="botao botao-inscreva">Inscreva-se<br><strong>Aqui!</strong></a>
+        <a href="https://portal.apprbs.com.br/medicina-unifacema" class="botao botao-inscreva">Inscreva-se<br><strong>Aqui!</strong></a>
     <a href="https://unifacema.edu.br/storage/16112/EDITAL-REITORIA-N%C2%BA-025-2025---TRANFER%C3%8ANCIA-EXTERNA-DE-MEDICINA-2026.1.pdf" class="botao botao-edital">Download do Edital<br><strong>Clicando Aqui</strong></a>
     <div class="botao botao-inscricao">Inscrições:<br><strong>17/11 a 28/11</strong></div>
    
